--- a/main_page.html
+++ b/main_page.html
@@ -51,7 +51,7 @@
                 This is my rat, Oreo. No that is not a typo. She is feral. Her mother, Tommy, was a feral cat found in a dumpster by my mother's coworker, and Oreo has 
                 inherited that craziness.
                 She can leap 2 meters in the air without trying. She stopped ageing at some point, and has just been stuck looking like a teenager cat for months now.
-                She has the zoomies 24/7. She WILL steal food. She once tried to tightrope walk on a 2cm thick wood block dangling over a 8 foot drop.
+                She has the zoomies 24/7. She WILL steal food. She fears NOTHING. She once tried to tightrope walk on a 2cm thick wood block dangling over a 8 foot drop.
                 She does not gain weight, despite frequently stealing food from us. She has somehow learned how to meow in such a way that it sounds like a human with
                 a croaky voice going "...Helloooo?" like something out of a horror movie. She is, pardon my language, absolutely batshit insane.
       </p>
