--- a/main_page.html
+++ b/main_page.html
@@ -152,14 +152,14 @@
     <hr>
 
 
-                                                                                <!-- Link to page 2 -->
+                                                                                <!-- Link to page 2 (fun) -->
 
 <!-- Start of section "assign" (HF)-->
   <section class="assign">
     
 <!-- Start of section "assign-det" WITHIN section "assign" (HF) -->
     <section class="assign-det">
-      <a href="https://www.youtube.com/watch?v=lIM8W54STzI"><h2>Click here to go to an ugly page full of stock images!</h2></a>
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><h2>Click here to go to an ugly page full of stock images!</h2></a>
     </section> <!-- End of section "assign-det" (HF) -->
     
 </section> <!-- End of section "assign" (HF) -->
