--- a/cats.html
+++ b/cats.html
@@ -16,26 +16,32 @@
     <p>WOW look at all those cat pics!</p>
     
     <h2>Some pics of Oreo:</h2>
+    <section class="catpics">
     <img src="images/Oreo_1.jpg" />
     <img src="images/Oreo_2.jpg" />
     <img src="images/Oreo_3.jpg" />
     <img src="images/Oreo_4.jpg" />
+    </section>
 
     <hr>
 
     <h2>Some pics of Reese:</h2>
+    <section class="catpics">
     <img src="images/Reese_1.jpg" />
     <img src="images/Reese_2.jpg" />
     <img src="images/Reese_3.jpg" />
     <img src="images/Reese_4.jpg" />
+    </section>
 
     <hr>
 
     <h2>And now some picturs of both!</h2>
+    <section class="catpics">
     <img src="images/OreoReese_1.jpg" />
     <img src="images/OreoReese_2.jpg" />
     <img src="images/OreoReese_3.jpg" />
     <img src="images/OreoReese_4.jpg" />
+    </section>
     
   </body>
 </html>
