--- a/cats.html
+++ b/cats.html
@@ -3,7 +3,7 @@
 <!-- a while back to make another webpage. -->
 <html>
   <head>              <!-- ALSO CONTAINS LINK TO CSS -->
-    <title>MART 210: Chloe Brown</title>
+    <title>MART 210: Chloe Brown - Cats!</title>
     
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css" />
