--- a/aboutme.html
+++ b/aboutme.html
@@ -35,7 +35,7 @@ Last updated: Dec/10/2023
                 are really easy. I'm going into videogame development. I love open-world RPGs with fantasy aspects (Examples: Legend of Zelda: Breath of the Wild, 
                 Genshin Impact, MMORPGS like Black Desert, Fate of the Empress, FFXIV, etc.). I decided to be a game developer because one of my favorite games
                 as a kid was Legend of Zelda: The Phantom Hourglass. Spoiler alert, but there wasn't anything endgame. You beat the big bad boss, then it shows a little
-                cutscene, then it resets you back to right before the boss. For weeks, I perfected by strategy after that, eventually able to beat the boss multiple times in
+                cutscene, then it resets you back to right before the boss. For weeks, I perfected my strategy after beating him for the first time, eventually able to beat the boss multiple times in
                 10 minutes I think. Anyways, I got so mad at how unsatisfied I was after beating the boss, so I decided I would make a BETTER game, with an ending I would actually
                 feel satisfied to witness.
       </p>
